syntax = "proto3";
package IM.BaseDefine;
option java_package = "com.tenth.space.protobuf";
//option java_outer_classname = "MOGUJIEIMMessage";
option optimize_for = LITE_RUNTIME;

// service id
enum ServiceID{
	PB3_UNUSE			= 0x0000;
    SID_LOGIN           = 0x0001;           // for login
    SID_BUDDY_LIST      = 0x0002;		    // for friend list
    SID_MSG             = 0x0003;           //
    SID_GROUP           = 0x0004;           // for group message
    SID_FILE            = 0x0005;
    SID_SWITCH_SERVICE  = 0x0006;
    SID_OTHER           = 0x0007;
    SID_INTERNAL        = 0x0008;		     
    SID_REGISTER        = 0x0009;
	SID_BLOG            = 0x000A;            
	SID_SYS_MSG         = 0x000B;
	SID_SERVER          = 0x000C;	
    SID_FRIENDSHIP		= 0x0010;	
}
 
// 
enum FriendShipCmdID{
	 PB3_UNUSE1					= 0x0000;
     CID_FRIEND_SHIP_ADD_REQ	= 0x1001;	//添加好友请求
     CID_FRIEND_SHIP_ADD_RES	= 0x1002;
     CID_FRIEND_SHIP_ADD_NOTIFY = 0x1003;	//添加好友时向对方发送通知
     CID_FRIEND_SHIP_LIST_REQ	= 0x1004;	//获取好友列表
     CID_FRIEND_SHIP_LIST_RES	= 0x1005;
     CID_FRIEND_SHIP_UPDATE_RELATION_REQ = 0x1006;//更新好友状态
     CID_FRIEND_SHIP_UPDATE_RELATION_RES = 0x1007;
     CID_FRIEND_SHIP_GET_UNAGREE_FRIEND_LIST_REQ = 0x1008;//获取未确认好友列表
     CID_FRIEND_SHIP_GET_UNAGREE_FRIEND_LIST_RES = 0x1009;
     CID_FRIEND_SHIP_SEARCH_FRIEND_REQ = 0x100a;
     CID_FRIEND_SHIP_SEARCH_FRIEND_RES =0x100b;
}

// command id for login
enum LoginCmdID{
	PB3_UNUSE2						= 0x0000;
    CID_LOGIN_REQ_MSGSERVER         = 0x0101; 	//
    CID_LOGIN_RES_MSGSERVER         = 0x0102;	//
    CID_LOGIN_REQ_USERLOGIN         = 0x0103;	//
    CID_LOGIN_RES_USERLOGIN         = 0x0104;	//
    CID_LOGIN_REQ_LOGINOUT          = 0x0105;	//
    CID_LOGIN_RES_LOGINOUT          = 0x0106; 	//
    CID_LOGIN_KICK_USER				= 0x0107; 	//
    CID_LOGIN_REQ_DEVICETOKEN       = 0x0108;  //
    CID_LOGIN_RES_DEVICETOKEN       = 0x0109;  //
    CID_LOGIN_REQ_KICKPCCLIENT      = 0x010a;
    CID_LOGIN_RES_KICKPCCLIENT      = 0x010b;
    CID_LOGIN_REQ_PUSH_SHIELD       = 0x010c;	//勿扰
    CID_LOGIN_RES_PUSH_SHIELD       = 0x010d; 	//
    CID_LOGIN_REQ_QUERY_PUSH_SHIELD = 0x010e; 	//
    CID_LOGIN_RES_QUERY_PUSH_SHIELD = 0x010f;
}

// command id for buddy list
enum BuddyListCmdID{
	PB3_UNUSE3					= 0x0000;
    CID_BUDDY_LIST_RECENT_CONTACT_SESSION_REQUEST       = 0x0201;
    CID_BUDDY_LIST_RECENT_CONTACT_SESSION_RESPONSE      = 0x0202;
    CID_BUDDY_LIST_STATUS_NOTIFY                        = 0x0203; //
    CID_BUDDY_LIST_USER_INFO_REQUEST                    = 0x0204; //
    CID_BUDDY_LIST_USER_INFO_RESPONSE                   = 0x0205;
    CID_BUDDY_LIST_REMOVE_SESSION_REQ                   = 0x0206;
    CID_BUDDY_LIST_REMOVE_SESSION_RES                   = 0x0207;
    CID_BUDDY_LIST_ALL_USER_REQUEST                     = 0x0208;
    CID_BUDDY_LIST_ALL_USER_RESPONSE                    = 0x0209;
    CID_BUDDY_LIST_USERS_STATUS_REQUEST                 = 0x020a;
    CID_BUDDY_LIST_USERS_STATUS_RESPONSE                = 0x020b;
    CID_BUDDY_LIST_CHANGE_AVATAR_REQUEST                = 0x020c;
    CID_BUDDY_LIST_CHANGE_AVATAR_RESPONSE               = 0x020d;
    CID_BUDDY_LIST_PC_LOGIN_STATUS_NOTIFY               = 0x020e;
    CID_BUDDY_LIST_REMOVE_SESSION_NOTIFY                = 0x020f;
    CID_BUDDY_LIST_DEPARTMENT_REQUEST                   = 0x0210;
    CID_BUDDY_LIST_DEPARTMENT_RESPONSE                  = 0x0211;
    CID_BUDDY_LIST_AVATAR_CHANGED_NOTIFY                = 0x0212; //头像更改通知
    CID_BUDDY_LIST_CHANGE_SIGN_INFO_REQUEST             = 0x0213; //修改个性签名请求
    CID_BUDDY_LIST_CHANGE_SIGN_INFO_RESPONSE            = 0x0214; //
    CID_BUDDY_LIST_SIGN_INFO_CHANGED_NOTIFY             = 0x0215; //签名修改通知
    CID_BUDDY_LIST_SEARCH_USER_REQUEST                  = 0x0216;
    CID_BUDDY_LIST_SEARCH_USER_RESPONSE                 = 0x0217;
	
    CID_BUDDY_LIST_FOLLOW_USER_REQUEST                  = 0x0220;
    CID_BUDDY_LIST_FOLLOW_USER_RESPONSE                 = 0x0221;
	CID_BUDDY_LIST_DEL_FRIEND_REQUEST                   = 0x0222;
    CID_BUDDY_LIST_DEL_FRIEND_RESPONSE                  = 0x0223;
	CID_BUDDY_LIST_DEL_FOLLOW_USER_REQUEST              = 0x0224;
    CID_BUDDY_LIST_DEL_FOLLOW_USER_RESPONSE             = 0x0225;

	CID_BUDDY_LIST_ALL_ONLINE_USER_CNT_REQUEST          = 0x0228;
    CID_BUDDY_LIST_ALL_ONLINE_USER_CNT_RESPONSE         = 0x0229;
	CID_BUDDY_LIST_UPDATE_USER_INFO_REQUEST             = 0x022a;
    CID_BUDDY_LIST_UPDATE_USER_INFO_RESPONSE            = 0x022b;
	CID_BUDDY_LIST_RECOMMEND_LIST_REQUEST               = 0x022c;
    CID_BUDDY_LIST_RECOMMEND_LIST_RESPONSE              = 0x022d;
	
	//cita add:
	CID_BUDDY_LIST_GET_ALL_ONLINE_USER_INFO_REQUEST		= 0x022e;
	CID_BUDDY_LIST_GET_ALL_ONLINE_USER_INFO_RESPONSE	= 0x022f;

}

// command id for msg
enum MessageCmdID{
	PB3_UNUSE4					= 0x0000;
    CID_MSG_DATA					= 0x0301;	//
    CID_MSG_DATA_ACK				= 0x0302; 	//
    CID_MSG_READ_ACK				= 0x0303; 	//
    CID_MSG_READ_NOTIFY     		= 0x0304;    //  已读消息通知
    CID_MSG_TIME_REQUEST 			= 0x0305;	//
    CID_MSG_TIME_RESPONSE			= 0x0306; 	//
    CID_MSG_UNREAD_CNT_REQUEST		= 0x0307; 	//
    CID_MSG_UNREAD_CNT_RESPONSE		= 0x0308;	//
    CID_MSG_LIST_REQUEST            = 0x0309;    //获取指定队列消息
    CID_MSG_LIST_RESPONSE           = 0x030a;
    CID_MSG_GET_LATEST_MSG_ID_REQ   = 0x030b;
    CID_MSG_GET_LATEST_MSG_ID_RSP   = 0x030c;
    CID_MSG_GET_BY_MSG_ID_REQ       = 0x030d;
    CID_MSG_GET_BY_MSG_ID_RES       = 0x030e;
}

// command id for group message
enum GroupCmdID{
	PB3_UNUSE5					= 0x0000;
    CID_GROUP_NORMAL_LIST_REQUEST			= 0x0401;
    CID_GROUP_NORMAL_LIST_RESPONSE			= 0x0402;
    CID_GROUP_INFO_REQUEST          		= 0x0403;
    CID_GROUP_INFO_RESPONSE         		= 0x0404;
    CID_GROUP_CREATE_REQUEST                = 0x0405;
    CID_GROUP_CREATE_RESPONSE               = 0x0406;
    CID_GROUP_CHANGE_MEMBER_REQUEST 		= 0x0407;
    CID_GROUP_CHANGE_MEMBER_RESPONSE 		= 0x0408;
    CID_GROUP_SHIELD_GROUP_REQUEST  		= 0x0409;
    CID_GROUP_SHIELD_GROUP_RESPONSE 		= 0x040a;
    CID_GROUP_CHANGE_MEMBER_NOTIFY			= 0x040b;
	CID_GROUP_RECOMMAND_LIST_INFO_REQUEST	= 0x040c;
	CID_GROUP_RECOMMAND_LIST_INFO_RESPONSE	= 0x040d;
}

enum FileCmdID{
	PB3_UNUSE6					= 0x0000;
    CID_FILE_LOGIN_REQ              = 0x0501; // sender/receiver need to login to
    CID_FILE_LOGIN_RES              = 0x0502; // login success or failure
    CID_FILE_STATE                  = 0x0503;
    CID_FILE_PULL_DATA_REQ          = 0x0504;
    CID_FILE_PULL_DATA_RSP          = 0x0505;
    // To MsgServer
    CID_FILE_REQUEST                = 0x0506; // sender -> receiver
    CID_FILE_RESPONSE               = 0x0507; // receiver -> sender
    CID_FILE_NOTIFY                 = 0x0508;
    CID_FILE_HAS_OFFLINE_REQ        = 0x0509;
    CID_FILE_HAS_OFFLINE_RES        = 0x050a;
    CID_FILE_ADD_OFFLINE_REQ        = 0x050b;
    CID_FILE_DEL_OFFLINE_REQ        = 0x050c;
}

// command id for switch service
enum SwitchServiceCmdID{
	PB3_UNUSE7					= 0x0000;
    CID_SWITCH_P2P_CMD	= 0x0601;	//
}

enum OtherCmdID{
	PB3_UNUSE8					= 0x0000;
    CID_OTHER_HEARTBEAT                     = 0x0701;
    CID_OTHER_STOP_RECV_PACKET              = 0x0702;
    CID_OTHER_VALIDATE_REQ                  = 0x0703;
    CID_OTHER_VALIDATE_RSP                  = 0x0704;
    CID_OTHER_GET_DEVICE_TOKEN_REQ          = 0x0705;
    CID_OTHER_GET_DEVICE_TOKEN_RSP          = 0x0706;
    CID_OTHER_ROLE_SET                      = 0x0707;
    CID_OTHER_ONLINE_USER_INFO              = 0x0708;
    CID_OTHER_MSG_SERV_INFO                 = 0x0709;
    CID_OTHER_USER_STATUS_UPDATE            = 0x070a;
    CID_OTHER_USER_CNT_UPDATE               = 0x070b;
    CID_OTHER_SERVER_KICK_USER              = 0x070d;
    CID_OTHER_LOGIN_STATUS_NOTIFY           = 0x070e;
    CID_OTHER_PUSH_TO_USER_REQ              = 0x070f;
    CID_OTHER_PUSH_TO_USER_RSP              = 0x0710;
    CID_OTHER_GET_SHIELD_REQ                = 0x0711;
    CID_OTHER_GET_SHIELD_RSP                = 0x0712;
    CID_OTHER_FILE_TRANSFER_REQ             = 0x0731;
    CID_OTHER_FILE_TRANSFER_RSP             = 0x0732;
    CID_OTHER_FILE_SERVER_IP_REQ            = 0x0733;
    CID_OTHER_FILE_SERVER_IP_RSP            = 0x0734;
    CID_OTHER_REGISTER_REQ                  = 0x0735;
    CID_OTHER_REGISTER_RSP                  = 0x0736;
}

// command id for register 
enum RegisterCmdID{
	PB3_UNUSE9					= 0x0000;
    CID_REGISTER_REQ         = 0x0901; 	//
    CID_REGISTER_RSP         = 0x0902;	//
}

enum BlogCmdID{
	PB3_UNUSE10					= 0x0000;
	CID_BLOG_SEND			        = 0x0A01;	//发blog
    CID_BLOG_SEND_ACK			    = 0x0A02;
    CID_BLOG_GET_LIST_REQUEST       = 0x0A03;    //获取blog列表
    CID_BLOG_GET_LIST_RESPONSE      = 0x0A04;
    CID_BLOG_ADD_COMMENT_REQUEST       = 0x0A05;    //添加评论
    CID_BLOG_ADD_COMMENT_RESPONSE      = 0x0A06;
    CID_BLOG_GET_COMMENT_REQUEST       = 0x0A07;    //取评论
    CID_BLOG_GET_COMMENT_RESPONSE      = 0x0A08;
	
}

// SID_SYS_MSG : command id for system
enum SysMsgCmdID{
	PB3_UNUSE11					= 0x0000;
	CID_SYS_MSG_SEND_DATA_REQUEST             = 0x0B01;
	CID_SYS_MSG_SEND_DATA_RESPONSE            = 0x0B02;
	CID_SYS_MSG_DATA                          = 0x0B03;  // 1.在线时，后台推送过来的，被动接收，不需请求
	                                                     // 2.离线后，再上线，要去主动请求离线消息
	CID_SYS_MSG_GET_UNREAD_CNT_REQUEST        = 0x0B04;
	CID_SYS_MSG_GET_UNREAD_CNT_RESPONSE       = 0x0B05;
    CID_SYS_MSG_GET_DATA_REQUEST              = 0x0B06;
	CID_SYS_MSG_GET_DATA_RESPONSE             = 0x0B07;
	
	CID_SYS_MSG_READ_ACK                      = 0x0B08;  //只有发送，没有response
	CID_SYS_GET_STUDY_TIME_REQUEST            = 0x0B09;  //取排行榜
    CID_SYS_GET_STUDY_TIME_RESPONSE           = 0x0B0a;
}

enum ServerCmdID{
	PB3_UNUSE12					= 0x0000;
    CID_SERVER_SAVE_TIME_CMD	= 0x0C01;	//
	CID_ONLINEUSER_INFO 		= 0x0C02;
}

enum ResultType{
	REFUSE_REASON_NONE				= 0;
	REFUSE_REASON_NO_MSG_SERVER		= 1;
	REFUSE_REASON_MSG_SERVER_FULL 	= 2;
	REFUSE_REASON_NO_DB_SERVER		= 3;
	REFUSE_REASON_NO_LOGIN_SERVER	= 4;
	REFUSE_REASON_NO_ROUTE_SERVER	= 5;
	REFUSE_REASON_DB_VALIDATE_FAILED = 6;
	REFUSE_REASON_VERSION_TOO_OLD	= 7;

}

enum KickReasonType{
	PB3_UNUSE13					= 0x0000;
	KICK_REASON_DUPLICATE_USER = 1;
    KICK_REASON_MOBILE_KICK    = 2;
}

enum OnlineListType{
	PB3_UNUSE14					= 0x0000;
	ONLINE_LIST_TYPE_FRIEND_LIST = 1;
}

enum UserStatType{
	PB3_UNUSE15					= 0x0000;
	USER_STATUS_ONLINE 	= 1;
	USER_STATUS_OFFLINE	= 2;
	USER_STATUS_LEAVE	= 3;

}
enum SessionType{
	PB3_UNUSE16					= 0x0000;
	SESSION_TYPE_SINGLE  = 0x01;          	//单个用户会话
	SESSION_TYPE_GROUP   = 0x02;          	//群会话
	SESSION_TYPE_SYSTEM  = 0x03;            //系统消息
	SESSION_TYPE_ERROR_NOT_FRIEND  = 0x20;            //error
}

enum MsgType{
	PB3_UNUSE17					= 0x0000;
	MSG_TYPE_SINGLE_TEXT    = 0x01;
    MSG_TYPE_SINGLE_AUDIO   = 0x02;
    MSG_TYPE_GROUP_TEXT     = 0x11;
    MSG_TYPE_GROUP_AUDIO    = 0x12;
	MSG_TYPE_SINGLE_PAY		= 0x21;
	MSG_TYPE_GROUP_PAY		= 0x22;
	MSG_TYPE_ERROR_NOT_FRIEND     = 0xF0;
}

enum BlogType{
	PB3_UNUSE18					= 0x0000;
	BLOG_TYPE_RCOMMEND       = 0x01;
    BLOG_TYPE_FRIEND         = 0x02;
    BLOG_TYPE_FOLLOWUSER     = 0x03;
}

enum BlogType2{
	PB3_UNUSE19					= 0x0000;
	BLOG_TYPE2_BLOG          = 0x01;
    BLOG_TYPE2_COMMENT       = 0x02;
}

enum ClientType{
	PB3_UNUSE20					= 0x0000;
	CLIENT_TYPE_WINDOWS     = 0x01;
    CLIENT_TYPE_MAC         = 0x02;
    CLIENT_TYPE_IOS         = 0x11;
    CLIENT_TYPE_ANDROID     = 0x12;
}

enum GroupType{
	PB3_UNUSE21				= 0x0000;
	GROUP_TYPE_NORMAL		= 0x01;
	GROUP_TYPE_TMP			= 0x02;
	GROUP_TYPE_ACTIVE		= 0x03; //cita add: 新群分类
}

enum GroupModifyType{
	PB3_UNUSE22				= 0x0000;
	GROUP_MODIFY_TYPE_ADD	= 0x01;
	GROUP_MODIFY_TYPE_DEL	= 0x02;
}

enum TransferFileType{
	PB3_UNUSE23					= 0x0000;
    FILE_TYPE_ONLINE        = 0x01;
    FILE_TYPE_OFFLINE       = 0x02;
}

enum ClientFileState{
    CLIENT_FILE_PEER_READY  = 0x00;
    CLIENT_FILE_CANCEL      = 0x01;
    CLIENT_FILE_REFUSE      = 0x02;
    CLIENT_FILE_DONE       = 0x03;
}

enum ClientFileRole{
	PB3_UNUSE24					= 0x0000;
    CLIENT_REALTIME_SENDER  = 0x01;
    CLIENT_REALTIME_RECVER  = 0x02;
    CLIENT_OFFLINE_UPLOAD   = 0x03;
    CLIENT_OFFLINE_DOWNLOAD = 0x04;
}

enum FileServerError{
    FILE_SERVER_ERRNO_OK                                = 0x00;
    FILE_SERVER_ERRNO_CREATE_TASK_ID_ERROR              = 0x01;
    FILE_SERVER_ERRNO_CREATE_TASK_ERROR                 = 0x02;
    FILE_SERVER_ERRNO_LOGIN_INVALID_TOKEN               = 0x03;
    FILE_SERVER_ERRNO_INVALID_USER_FOR_TASK             = 0x04;
    FILE_SERVER_ERRNO_PULL_DATA_WITH_INVALID_TASK_ID    = 0x05;
    FILE_SERVER_ERRNO_PULL_DATA_ILLIEAGE_USER           = 0x06;
    FILE_SERVER_ERRNO_PULL_DATA_MKDIR_ERROR             = 0x07;
    FILE_SERVER_ERRNO_PULL_DATA_OPEN_FILE_ERROR         = 0x08;
    FILE_SERVER_ERRNO_PULL_DATA_READ_FILE_HEADER_ERROR  = 0x09;
    FILE_SERVER_ERRNO_PULL_DATA_ALLOC_MEM_ERROR         = 0x0a;
    FILE_SERVER_ERRNO_PULL_DATA_SEEK_OFFSET_ERROR       = 0x0b;
    FILE_SERVER_ERRNO_PULL_DATA_FINISHED                = 0x0c;
}

enum SessionStatusType{
    SESSION_STATUS_OK           = 0x00;
    SESSION_STATUS_DELETE       = 0x01;
}

enum DepartmentStatusType{
    DEPT_STATUS_OK              = 0x00;
    DEPT_STATUS_DELETE          = 0x01;
}

message IpAddr{
	 string ip = 1;
	 uint32 port = 2;
}

enum UserRelationType{
	RELATION_RECOMMEND          = 0x00;
	RELATION_FRIEND             = 0x01;
	RELATION_FOLLOW             = 0x02;
	RELATION_UNCONFIRMED	    = 0x03;
}

message UserInfo{
	 string user_id = 1;
	 uint32 user_gender = 2; 	//// 用户性别,男：1 女：2 人妖/外星人：0
	 string user_nick_name = 3;	//绰号
	 string avatar_url = 4;
	 uint32 department_id = 5;
	 string email = 6;
	 string user_real_name = 7;	//真名
	 string user_tel = 8;
	 string user_domain = 9;	//用户名拼音
     uint32 status = 10;        // 0x11:group
     string sign_info = 11;
     uint32 updated = 12;
	 UserRelationType relation = 13;
	 uint32 fans_cnt = 14;
	 string user_addr = 15;
	 string user_pubkey = 16;
	 string referral_code = 17;

}

message ContactSessionInfo{
	 string session_id = 1;
	 SessionType session_type = 2;
     SessionStatusType session_status = 3;
	 uint32 updated_time = 4;
	 uint32 latest_msg_id = 5;
	 bytes latest_msg_data = 6;
     MsgType latest_msg_type = 7;
     string latest_msg_from_user_id = 8;
}

message UserStat{
	 string user_id = 1;
	 UserStatType status = 2;
}

message ServerUserStat{
	 string user_id = 1;
	 UserStatType status = 2;
	 ClientType client_type = 3;
}

message UnreadInfo{
	 string session_id = 1;
	 SessionType session_type = 2;
	 uint32 unread_cnt = 3;
	 uint32 latest_msg_id = 4;
	 bytes latest_msg_data = 5;
     MsgType latest_msg_type = 6;
     string latest_msg_from_user_id = 7;        //发送得用户id
	 repeated bytes all_pay_msg = 8;
}

message MsgInfo{
	 uint32 msg_id = 1;
	 string from_session_id = 2;   //发送的用户id
	 uint32 create_time = 3;
	 MsgType msg_type = 4;
	 bytes msg_data = 5;
	 bytes msg_sig = 6; //消息的签名
}

message BlogInfo{
	 uint32 blog_id = 1;
	 string writer_user_id = 2;            //blog作者user id
	 string nick_name = 3;        //blog作者nick name
	 string avatar_url = 4;        //blog作者头像url
	 uint32 like_cnt = 5;        //点赞数
	 uint32 comment_cnt = 6;        //评论数
	 uint32 create_time = 7;
	 bytes blog_data = 8;
}

message GroupVersionInfo{
	 string group_id = 1;
	 uint32 version = 2;
	
}

message GroupInfo{
	 string group_id = 1;
	 uint32 version = 2;
	 string group_name = 3;
	 string group_avatar = 4;
	 string group_creator_id = 5;
	 GroupType group_type = 6;
	 uint32 shield_status = 7;		//1: shield  0: not shield 
	 repeated string group_member_list = 8;
	 repeated IM.BaseDefine.UserInfo group_member_users = 9;
}

message UserTokenInfo{
     string user_id = 1;
	 ClientType user_type = 2;
	 string token = 3;
	 uint32 push_count = 4;
	 uint32 push_type = 5;			//1: 正常推送  	2:无打扰式推送
}

message PushResult{
	 string user_token = 1;
	 uint32 result_code = 2;
}

message ShieldStatus{
	 string user_id = 1;		
	 string group_id = 2;	
	 uint32 shield_status = 3;		//1: shield  0: not shield 
}

message OfflineFileInfo{
     string from_user_id = 1;
     string task_id = 2;
     string file_name = 3;
     uint32 file_size = 4;
}

message DepartInfo{
	 uint32 dept_id = 1;
	 uint32 priority = 2;
	 string dept_name = 3;
     uint32 parent_dept_id = 4;
     DepartmentStatusType dept_status = 5;
}

message PushShieldStatus{
     string user_id = 1;
     uint32 shield_status = 2;		//1: shield  0: not shield
}
